# memovi

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ENGINEERING_SNAPSHOT.md  LICENSE  PHILOSOPHY.md  README.md  ROADMAP.md  ROADMAP_V2.md  STATUS.md  Taskfile.yml  alembic.ini  compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
.cursor/rules/: 01-project.mdc  02-architecture.mdc  03-implementation.mdc  04-quality.mdc  05-documentation.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: backend.yml  frontend.yml
apps/api/: README.md  pyproject.toml
apps/api/src/api/: app.py  bootstrap.py  capability_execution_integration.py  capability_framework.py  database.py  document_processing.py  documents_session.py  health.py  intelligence_integration.py  lifespan.py  memory_integration.py  middleware.py  observability_bridge.py  routers.py  search_integration.py  workspace_context.py
apps/api/src/api/events/: __init__.py  in_process_event_dispatcher.py
apps/api/tests/: test_conversation_search_retrieval_integration.py  test_cors_local_clients.py  test_durable_conversation_api.py  test_full_text_search_integration.py  test_intelligence_search_wiring.py  test_knowledge_explorer_api.py  test_knowledge_materialized_search_integration.py  test_observability_acceptance.py  test_observability_integration.py  test_processing_completed_memory_integration.py  test_search_indexed_embedding_integration.py  test_search_knowledge_retriever.py  test_search_metadata_filter_integration.py  test_semantic_search_integration.py  test_unified_retrieval_integration.py  test_workspace_context.py  test_workspace_isolation_integration.py
apps/desktop/: README.md  index.html  package.json
apps/desktop/src/: App.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/api/: capabilities.ts  client.ts  config.ts  conversations.ts  documents.ts  health.ts  memory.ts  search.ts  types.ts  workspaces.ts
apps/desktop/src/components/: ChatPage.tsx  KnowledgeExplorerPage.tsx  MainContent.tsx  Shell.tsx  Sidebar.tsx  StatusBar.tsx  TopBar.tsx
apps/desktop/src/navigation/: pages.ts
apps/desktop/src/state/: AppStateContext.tsx
apps/desktop/src/styles/: shell.css  theme.css
apps/web/: eslint.config.mjs  next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
database/migrations/: env.py
database/migrations/versions/: 20260629_0001_create_auth_tables.py  20260701_0002_create_documents_tables.py  20260706_0003_add_normalized_content.py  20260713_0004_create_memory_and_search_tables.py  20260713_0005_add_search_documents_full_text_index.py  20260715_0006_add_search_metadata_filter_columns.py  20260717_0007_enable_pgvector_search_embeddings.py  20260717_0008_create_intelligence_conversation_tables.py  20260718_0009_add_workspace_ownership.py  20260721_0010_add_conversation_title.py
docs/: ARCHITECTURE.md  ENGINEERING_SNAPSHOT.md  PHILOSOPHY.md  PRODUCT_VISION.md  README.md  ROADMAP.md  ROADMAP_V2.md  STATUS.md
docs/architecture/: CAPABILITY_EXECUTION.md  CAPABILITY_FRAMEWORK.md  DESKTOP_CLIENT.md  FILESYSTEM_CAPABILITY.md  FILESYSTEM_WRITE.md  KNOWLEDGE_EXPLORER.md  MODEL_PROVIDER_FRAMEWORK.md  README.md  connector-framework.md  deployment.md  domains.md  event-architecture.md  intelligence-architecture.md  knowledge-processing-pipeline.md  module-architecture.md  observability.md  repository-architecture.md  request-lifecycle.md  scaling.md  search-architecture.md  storage-architecture.md
docs/development/: dev-container.md  developer-tooling.md  local-infrastructure.md
scripts/: process_document.py  verify_m19_conversation_experience.py  verify_workspace_e2e.py
