[project]
name = "memovi"
version = "0.1.0"
description = "Self-hosted knowledge platform for durable, organized, retrievable memory."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
    { name = "Trey Israel" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[dependency-groups]
runtime = [
    "alembic",
    "argon2-cffi",
    "asyncpg",
    "fastapi",
    "httpx",
    "pgvector",
    "psycopg[binary]",
    "pydantic>=2",
    "sqlalchemy>=2",
    "uvicorn[standard]>=0.49.0",
]
dev = [
    "black",
    "mypy",
    "pre-commit",
    "ruff",
]
test = [
    "coverage[toml]",
    "httpx2",
    "pytest",
    "pytest-asyncio",
]

[tool.uv]
package = false
default-groups = [
    "runtime",
    "dev",
    "test",
]

[tool.uv.workspace]
members = [
    "apps/api",
    "packages/*",
]

[tool.black]
line-length = 100
target-version = ["py314"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = [
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "E",
    "F",
    "I",
    "RUF",
    "SIM",
    "UP",
]

[tool.mypy]
python_version = "3.14"
strict = true
pretty = true
show_error_codes = true
warn_unused_configs = true
namespace_packages = true
explicit_package_bases = true
mypy_path = [
    "$MYPY_CONFIG_FILE_DIR/apps/api/src",
    "$MYPY_CONFIG_FILE_DIR/packages/auth/src",
    "$MYPY_CONFIG_FILE_DIR/packages/config/src",
    "$MYPY_CONFIG_FILE_DIR/packages/connectors/src",
    "$MYPY_CONFIG_FILE_DIR/packages/contracts/src",
    "$MYPY_CONFIG_FILE_DIR/packages/documents/src",
    "$MYPY_CONFIG_FILE_DIR/packages/intelligence/src",
    "$MYPY_CONFIG_FILE_DIR/packages/memory/src",
    "$MYPY_CONFIG_FILE_DIR/packages/observability/src",
    "$MYPY_CONFIG_FILE_DIR/packages/search/src",
    "$MYPY_CONFIG_FILE_DIR/packages/shared/src",
]
exclude = [
    "^\\.venv/",
    "^build/",
    "^dist/",
]

[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = [
    "apps/api/src",
    "packages/auth/src",
    "packages/config/src",
    "packages/connectors/src",
    "packages/contracts/src",
    "packages/documents/src",
    "packages/intelligence/src",
    "packages/memory/src",
    "packages/observability/src",
    "packages/search/src",
    "packages/shared/src",
]
addopts = [
    "--strict-config",
    "--strict-markers",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
]

[tool.coverage.run]
branch = true
source = [
    ".",
]
omit = [
    ".venv/*",
    "build/*",
    "dist/*",
    "docs/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    'if __name__ == "__main__":',
    "raise NotImplementedError",
]

[tool.coverage.xml]
output = "coverage.xml"
