[project]
name = "memovi-api"
version = "0.1.0"
description = "Backend composition root for the Memovi platform."
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "memovi-auth",
    "psycopg[binary]",
    "sqlalchemy>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources]
memovi-auth = { workspace = true }
