[project]
name = "memovi-api"
version = "0.1.0"
description = "Backend composition root for the Memovi platform."
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "memovi-auth",
    "memovi-documents",
    "memovi-intelligence",
    "memovi-memory",
    "memovi-search",
    "memovi-shared",
    "memovi-workspace",
    "psycopg[binary]",
    "python-multipart",
    "sqlalchemy>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/api",
]

[tool.uv]
package = true

[tool.uv.sources]
memovi-auth = { workspace = true }
memovi-documents = { workspace = true }
memovi-intelligence = { workspace = true }
memovi-memory = { workspace = true }
memovi-search = { workspace = true }
memovi-shared = { workspace = true }
memovi-workspace = { workspace = true }
